--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
   "dependencies": {
     "@vue/babel-helper-vue-jsx-merge-props": "^1.2.1",
     "@vue/babel-preset-jsx": "^1.2.4",
+    "bootstrap": "^3.4.1",
     "core-js": "^3.8.1",
     "element-ui": "^2.14.1",
+    "sortablejs": "^1.13.0",
     "vue": "^2.6.11",
     "vue-router": "^3.4.9"
   },
@@ -18,6 +20,8 @@
     "@vue/cli-plugin-babel": "^4.5.9",
     "@vue/cli-plugin-router": "^4.5.10",
     "@vue/cli-service": "~4.5.0",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^10.1.0",
     "vue-template-compiler": "^2.6.11"
   },
   "browserslist": [
