--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@vue/babel-helper-vue-jsx-merge-props": "^1.2.1",
     "@vue/babel-preset-jsx": "^1.2.4",
+    "axios": "^0.21.1",
     "bootstrap": "^3.4.1",
     "core-js": "^3.8.1",
     "element-ui": "^2.14.1",
