--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "element-ui": "^2.14.1",
     "sortablejs": "^1.13.0",
     "vue": "^2.6.11",
+    "vue-multiselect": "^2.1.6",
     "vue-router": "^3.4.9"
   },
   "devDependencies": {
